Kubernetes/kind/echo/echo_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-url: "https://auth.int.mydomain.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.int.mydomain.com/oauth2/start?rd=https%3A%2F%2F$host$request_uri"
spec:
  tls:
    - hosts:
        - echo1.int.mydomain.com
        - echo2.int.mydomain.com
      secretName: echo-tls
  rules:
    - host: echo1.int.mydomain.com
      http:
        paths:
          - backend:
              serviceName: echo1
              servicePort: 80
    - host: echo2.int.mydomain.com
      http:
        paths:
          - backend:
              serviceName: echo2
              servicePort: 80
